# oaknut

./: .gitignore  CMakeLists.txt  LICENSE  README.md  TODO.md  oaknut.make
doc/: intro.md
docgen/: .gitignore  index.md
docs/: .gitignore  .project  CNAME  _config.yml  index.md  intro.md  nav.js  oaknut.gemspec  readme.txt
docs/_doxygen/: Doxyfile
docs/_doxypp/: .project  doxypp.ipr  doxypp.iws
docs/_layouts/: default.html
docs/_sass/: oaknut.scss  variables.scss
docs/doxygen/: Doxyfile
docs/guides/: 1_principles.md  2_building.md  3_threading.md  4_resources.md  5_styles.md  6_layout.md  7_rendering.md  layout.md  principles.md  rendering.md
docs/jekyll/: nav.js  oaknut.gemspec
docs/minesweeper/: xx.data  xx.html
docs/ref/: navmodel.js
platform/: android.make  apple.make  ios.make  macos.make  web.make
platform/android/: android.cpp  async.cpp  audio.cpp  bitmap.cpp  camera.cpp  canvas.cpp  facedetect.cpp  timer.cpp  urlrequest.cpp
platform/apple/: apple.mm  audio.mm  bitmap.mm  camera.mm  canvas.mm  facedetect.mm  timer.mm  urlrequest.mm
platform/ios/: main.m  text_input.mm
platform/macos/: AppDelegate.h  AppDelegate.mm  main.m  text_input.mm
platform/web/: async.cpp  audio.cpp  bitmap.cpp  bitmap.h  camera.cpp  canvas.cpp  facedetect.cpp  urlrequest.cpp  web.cpp  web.html
samples/bbcnews/: Makefile
samples/embeeb/: Makefile  README.md
samples/hackernews/: Makefile  README.md
samples/helloworld/: Makefile
samples/listview/: Makefile
samples/minesweeper/: .gitignore  CMakeLists.txt  Makefile
samples/textedit/: Makefile  README.md
samples/videorecorder/: Makefile  README.md
samples/widgets/: Makefile
src/: oaknut.h
src/app/: _module.h  actionsheet.cpp  actionsheet.h  app.cpp  app.h  display.cpp  display.h  file.cpp  file.h  navigationcontroller.cpp  navigationcontroller.h  navigationitem.cpp  navigationitem.h  styles.cpp  styles.h  styles.res  urlrequest.cpp  urlrequest.h  urltask.cpp  urltask.h  userdefaults.cpp  userdefaults.h  viewcontroller.cpp  viewcontroller.h  worker.cpp  worker.h
src/base/: _module.h  bytearray.cpp  bytearray.h  bytestream.cpp  bytestream.h  error.cpp  error.h  hash.cpp  hash.h  oaknut.cpp  object.cpp  object.h  semaphore.cpp  semaphore.h  string.cpp  string.h  string_.h  task.cpp  task.h  timer.cpp  timer.h  timer.hpp  url.cpp  url.h  variant.cpp  variant.h
src/data/: _module.h  base64.cpp  base64.h  bytebuffer.cpp  bytebuffer.h  bytebufferstream.cpp  bytebufferstream.h  data.cpp  data.h  filestream.cpp  filestream.h  localstorage.cpp  localstorage.h  serializable.h  serializablebase.h  stream.cpp  stream.h  variant.cpp  variant.h  variantmap.cpp  variantmap.h
src/graphics/: _module.h  anim.cpp  anim.h  bitmap.cpp  bitmap.h  canvas.cpp  canvas.h  color.cpp  color.h  font.cpp  font.h  geom.cpp  geom.h  glhelp.cpp  glhelp.h  matrix.cpp  matrix.h  quadbuffer.cpp  quadbuffer.h  region.cpp  region.h  renderbatch.cpp  renderbatch.h  renderer.cpp  renderer.h  renderer_gl.cpp  renderer_gl.h  renderop.cpp  renderop.h  renderop_blur.cpp  renderop_blur.h  renderop_fillrect.cpp  renderop_fillrect.h  renderop_ink.cpp  renderop_ink.h  renderop_rect.cpp  renderop_rect.h  renderop_roundrect.cpp  renderop_roundrect.h  renderop_shadow.cpp  (+14 more)
src/media/: _module.h  audioinput.cpp  audioinput.h  audiooutput.cpp  audiooutput.h  audioresampler.cpp  audioresampler.h  aviwriter.cpp  aviwriter.h  camera.cpp  camera.h  riffwriter.cpp  riffwriter.h  videoplayer.cpp  videoplayer.h  videorecorder.cpp  videorecorder.h
src/text/: attributedstring.cpp  attributedstring.h  json.cpp  json.h  regex.cpp  regex.h  stringprocessor.cpp  stringprocessor.h  textlayout.cpp  textlayout.h  utf8.cpp  utf8.h  xml.cpp  xml.h
src/util/: cache.h  circularbuffer.cpp  circularbuffer.h  facedetector.cpp  facedetector.h  gravity.h  itempool.cpp  itempool.h  jpegencoder.cpp  jpegencoder.h  logging.cpp  logging.h  posixtaskqueue.cpp  posixtaskqueue.h  simplelistadapter.h
src/view/: _module.h  actionsheet.cpp  actionsheet.h  alignspec.cpp  alignspec.h  anim.cpp  anim.h  button.cpp  button.h  canvasview.cpp  canvasview.h  edittext.cpp  ikeyboardinputhandler.h  imageview.cpp  imageview.h  inputevent.h  label.cpp  label.h  layoutspec.cpp  layoutspec.h  linearlayout.cpp  linearlayout.h  listview.cpp  listview.h  measurespec.cpp  measurespec.h  navigationbar.cpp  scrollbar.cpp  scrollbar.h  searchbox.cpp  segmentedcontrol.cpp  segmentedcontrol.h  simplelistadapter.cpp  view.cpp  view.h  window.cpp  window.h
src/widgets/: _module.h  button.cpp  button.h  cameraview.cpp  cameraview.h  canvasview.cpp  canvasview.h  checkbox.cpp  checkbox.h  edittext.cpp  edittext.h  imageview.cpp  imageview.h  label.cpp  label.h  linearlayout.cpp  linearlayout.h  listview.cpp  listview.h  navigationbar.cpp  navigationbar.h  pincodeview.cpp  pincodeview.h  progressspinner.cpp  progressspinner.h  scrollbar.cpp  scrollbar.h  searchbox.cpp  searchbox.h  segmentedcontrol.cpp  segmentedcontrol.h  simplelistadapter.cpp  simplelistadapter.h  tabbar.cpp  tabbar.h  textfield.cpp  textfield.h  viewpager.cpp  viewpager.h  viewswitcher.cpp  (+1 more)
src/workers/: audioencoder_mp3_generic.cpp  audioresampler_generic.cpp  build_wasm.sh  facedetector_android.cpp  facedetector_apple.mm  facedetector_generic.cpp  facedetector_min.js  jpegencoder.cpp  jpegencoder_apple.cpp  mp3encoder_apple.mm
test/: Makefile  app_nativeTests.mm
(+691 files in other folders)
